--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
                 setTimeout(() => {
                     if (usernameInput === correctUsername && passwordInput === correctPassword) {
-                        window.location.href = 'index.html';
+                        window.location.href = 'home.html';
                     } else {
                         errorMessageDiv.textContent = 'User atau Kata Sandi salah.';
                         errorMessageDiv.style.display = 'block';
