--- a/trackingrt.html
+++ b/trackingrt.html
@@ -81,7 +81,7 @@
             allowfullscreen 
             sandbox="allow-storage-access-by-user-activation allow-scripts allow-same-origin allow-popups allow-popups-to-escape-sandbox">
         </iframe>
-        <button class="home-button" onclick="window.location.href='index.html'">🏠 Home</button>
+        <button class="home-button" onclick="window.location.href='home.html'">🏠 Home</button>
     </div>
 </body>
 </html>
