--- a/home.html
+++ b/home.html
@@ -586,13 +586,13 @@
             </div>
             <div class="leader-card">
                 <img src="miftah.jpeg" alt="Miftah">
-                <h3>Miftah</h3>
+                <h3>Pak Miftah</h3>
                 <p>SPV AZKO</p>
                 <a href="https://wa.me/6281285526402" target="_blank" rel="noopener noreferrer" class="chat-me">Chat Me</a>
             </div>
             <div class="leader-card">
                 <img src="deni.jpeg" alt="Denni">
-                <h3>Denni</h3>
+                <h3>Pak Denni</h3>
                 <p>SPV KLS</p>
                 <a href="https://wa.me/6281383256718" target="_blank" rel="noopener noreferrer" class="chat-me">Chat Me</a>
             </div>
