--- a/pic.html
+++ b/pic.html
@@ -165,13 +165,13 @@
     <script>
         const picData = [
             { name: "Pak Satiman (SPV)", status: "On Duty", phone: "628567301828" },
-            { name: "Ilyas", status: "On Duty", phone: "6289513768701" },
-            { name: "Irfan", status: "On Duty", phone: "6285215908460" },
-            { name: "Budi", status: "On Duty", phone: "62895340710827" },
+            { name: "Pak Ilyas", status: "On Duty", phone: "6289513768701" },
+            { name: "Pak Irfan", status: "On Duty", phone: "6285215908460" },
+            { name: "Pak Budi", status: "On Duty", phone: "62895340710827" },
             { name: "Pak Miftah (SPV)", status: "Libur", phone: "6281285526402" },
             { name: "Pak Denny (SPV)", status: "Libur", phone: "6281383256718" },
-            { name: "Yuni", status: "Libur", phone: "6282122153998" },
-            { name: "Faisal", status: "Libur", phone: "6287874805035" }
+            { name: "Pak Yuni", status: "Libur", phone: "6282122153998" },
+            { name: "Pak Faisal", status: "Libur", phone: "6287874805035" }
         ];
 
         function createPicCard(pic) {
