--- a/index.html
+++ b/index.html
@@ -3,70 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login - Portal Layanan Permintaan Pengiriman</title>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
-            background-color: #2c3e50;
+            margin: 0;
+            overflow: hidden;
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            margin: 0;
-            color: #ecf0f1;
+            background: #f0f4f7; /* Warna latar belakang body */
+            color: #37474f;
+        }
+
+        .container {
+            display: flex;
+            width: 90%;
+            max-width: 1200px;
+            height: 550px; /* Sesuaikan tinggi */
+            border-radius: 10px;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
             overflow: hidden;
-            font-size: 14px;
+        }
+
+        .left-side {
+            flex: 1;
+            background-image: url('sampul2.jfif'); /* Gambar latar belakang menu */
+            background-size: cover;
+            background-position: center;
+            color: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 40px;
+            text-align: center;
+            background-color: rgba(0, 0, 0, 0.5); /* Overlay gelap agar teks terlihat */
+            background-blend-mode: multiply;
+        }
+
+        .left-content {
+            max-width: 80%;
+        }
+
+        .left-content h2 {
+            font-size: 2.2em;
+            margin-bottom: 15px;
+            font-weight: 500;
+        }
+
+        .left-content p {
+            font-size: 1.1em;
+            line-height: 1.6;
+            opacity: 0.9;
+        }
+
+        .right-side {
+            flex: 1;
+            background-color: #fff;
+            color: #37474f;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 40px;
         }
 
         .login-container {
-            background-color: rgba(52, 73, 94, 0.8);
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 8px 30px rgba(0, 0, 0, 0.2);
             width: 90%;
             max-width: 350px;
             text-align: center;
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            animation: fadeIn 0.5s ease-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(-15px); }
-            to { opacity: 1; transform: translateY(0); }
         }
 
         .login-header {
             margin-bottom: 30px;
-            text-align: center;
         }
 
         .login-header h2 {
-            color: #ecf0f1;
+            font-size: 2em;
             margin-top: 0;
-            font-size: 2.2em;
-            font-weight: 700;
-            margin-bottom: 8px;
-            position: relative;
-            display: inline-block;
-        }
-
-        .login-header h2::after {
-            content: '';
-            position: absolute;
-            left: 50%;
-            bottom: -4px;
-            transform: translateX(-50%);
-            width: 50%;
-            height: 2px;
-            background-color: #3498db;
-            border-radius: 1px;
+            margin-bottom: 10px;
+            color: #263238;
         }
 
         .login-header p {
-            color: #bdc3c7;
-            font-size: 1em;
-            margin-top: 0;
+            color: #78909c;
+            font-size: 0.9em;
             opacity: 0.8;
         }
 
@@ -78,111 +99,125 @@
         .form-group label {
             display: block;
             margin-bottom: 5px;
-            color: #ecf0f1;
-            font-weight: 500;
             font-size: 0.9em;
-            opacity: 0.9;
+            font-weight: 500;
+            color: #263238;
         }
 
         .form-group input[type="text"],
         .form-group input[type="password"] {
             width: 100%;
-            padding: 10px;
-            border: none;
-            border-radius: 8px;
+            padding: 12px;
+            border: 1px solid #cfd8dc;
+            border-radius: 5px;
             box-sizing: border-box;
-            font-size: 0.9em;
-            background-color: rgba(52, 73, 94, 0.6);
-            color: #ecf0f1;
-            transition: background-color 0.3s ease, border-color 0.3s ease;
-        }
-
-        .form-group input::placeholder {
-            color: #bdc3c7;
-            opacity: 0.7;
+            font-size: 1em;
+            transition: border-color 0.3s ease;
         }
 
         .form-group input:focus {
             outline: none;
-            background-color: rgba(52, 73, 94, 0.8);
-            border-color: #3498db;
+            border-color: #03a9f4;
         }
 
         .form-group button {
-            background: linear-gradient(to right, #3498db, #2980b9);
+            background: #03a9f4; /* Warna tombol login menarik */
             color: white;
-            padding: 12px 15px;
+            padding: 14px 20px;
             border: none;
-            border-radius: 8px;
+            border-radius: 5px;
             cursor: pointer;
             width: 100%;
-            font-size: 1em;
+            font-size: 1.1em;
             font-weight: 500;
-            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
-            box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s ease;
         }
 
         .form-group button:hover {
-            transform: scale(1.01);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            background: #0288d1;
         }
 
         .error-message {
-            color: #ffdddd;
+            color: #e53935;
             margin-top: 15px;
-            font-size: 0.85em;
             text-align: center;
-            animation: shake 0.3s ease-in-out;
+            font-size: 0.9em;
         }
 
-        @keyframes shake {
-            0%, 100% { transform: translateX(0); }
-            25% { transform: translateX(-3px); }
-            75% { transform: translateX(3px); }
+        .loading-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            opacity: 0;
+            visibility: hidden;
+            transition: opacity 0.3s ease, visibility 0.3s ease;
         }
 
-        /* Responsif untuk tampilan ponsel yang lebih kecil */
-        @media (max-width: 480px) {
-            .login-container {
-                padding: 20px;
-                border-radius: 8px;
+        .loading-overlay.active {
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .loader {
+            border: 5px solid #f3f3f3;
+            border-top: 5px solid #03a9f4;
+            border-radius: 50%;
+            width: 50px;
+            height: 50px;
+            animation: spin 2s linear infinite;
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+
+        .help-button {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .help-button a {
+            display: inline-block;
+            background-color: #25d366; /* Warna hijau WhatsApp */
+            color: white;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1em;
+            transition: background-color 0.3s ease;
+        }
+
+        .help-button a:hover {
+            background-color: #128c7e;
+        }
+
+        /* Responsif */
+        @media (max-width: 768px) {
+            .container {
+                flex-direction: column;
+                height: auto;
+            }
+
+            .left-side, .right-side {
+                flex: none;
+                width: 100%;
+                padding: 30px;
+            }
+
+            .left-content {
                 max-width: 95%;
             }
 
-            .login-header {
-                margin-bottom: 20px;
-            }
-
-            .login-header h2 {
-                font-size: 1.8em;
-                margin-bottom: 4px;
-            }
-
-            .form-group {
-                margin-bottom: 15px;
-            }
-
-            .form-group label {
-                font-size: 0.85em;
-                margin-bottom: 6px;
-            }
-
-            .form-group input[type="text"],
-            .form-group input[type="password"] {
-                padding: 8px;
-                font-size: 0.85em;
-                border-radius: 6px;
-            }
-
-            .form-group button {
-                padding: 10px 12px;
-                font-size: 0.9em;
-                border-radius: 6px;
-            }
-
-            .error-message {
-                margin-top: 10px;
-                font-size: 0.8em;
+            .right-side {
+                padding-top: 0;
             }
         }
     </style>
@@ -190,33 +225,54 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
-    <div class="login-container">
-        <div class="login-header">
-            <h2>Akses Akun</h2>
-            <p>Silakan masukkan kredensial Anda untuk melanjutkan.</p>
+    <div class="container">
+        <div class="left-side">
+            <div class="left-content">
+                <h2>Selamat Datang di Portal Layanan Permintaan Pengiriman</h2>
+                <p>Platform responsif untuk memudahkan Anda dalam mengajukan dan melacak permintaan pengiriman Anda.</p>
+            </div>
         </div>
-        <form id="loginForm">
-            <div class="form-group">
-                <label for="username">User:</label>
-                <input type="text" id="username" name="username" placeholder="Masukkan username Anda" required>
+        <div class="right-side">
+            <div class="login-container">
+                <div class="login-header">
+                    <h2>Akses Akun</h2>
+                    <p>Silakan masukkan username dan kata sandi Anda.</p>
+                </div>
+                <form id="loginForm">
+                    <div class="form-group">
+                        <label for="username">Username:</label>
+                        <input type="text" id="username" name="username" placeholder="Masukkan username Anda" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Kata Sandi:</label>
+                        <input type="password" id="password" name="password" placeholder="Masukkan kata sandi Anda" required>
+                    </div>
+                    <div class="form-group">
+                        <button type="submit">
+                            <i class="fas fa-sign-in-alt"></i> Masuk
+                        </button>
+                    </div>
+                    <div id="errorMessage" class="error-message" style="display: none;"></div>
+                </form>
+                <div class="help-button">
+                    <p>Butuh bantuan?</p>
+                    <a href="https://wa.me/6287874805035?text=Halo,%20saya%20membutuhkan%20bantuan%20dengan%20portal%20pengiriman" target="_blank">
+                        <i class="fab fa-whatsapp"></i> Hubungi Admin
+                    </a>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Kata Sandi:</label>
-                <input type="password" id="password" name="password" placeholder="Masukkan kata sandi Anda" required>
-            </div>
-            <div class="form-group">
-                <button type="submit">
-                    <i class="fas fa-sign-in-alt"></i> Masuk
-                </button>
-            </div>
-            <div id="errorMessage" class="error-message" style="display: none;"></div>
-        </form>
+        </div>
+    </div>
+
+    <div class="loading-overlay" id="loadingOverlay">
+        <div class="loader"></div>
     </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const loginForm = document.getElementById('loginForm');
             const errorMessageDiv = document.getElementById('errorMessage');
+            const loadingOverlay = document.getElementById('loadingOverlay');
             const loginButton = loginForm.querySelector('button');
 
             loginForm.addEventListener('submit', function(event) {
@@ -228,23 +284,24 @@
                 const correctUsername = 'admin';
                 const correctPassword = '123';
 
-                loginButton.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Memproses...';
+                // Tampilkan animasi loading
+                loadingOverlay.classList.add('active');
                 loginButton.disabled = true;
+                loginButton.innerHTML = '<i class="fas fa-spinner fa-spin"></i> Memproses...';
 
                 setTimeout(() => {
+                    // Sembunyikan animasi loading
+                    loadingOverlay.classList.remove('active');
+                    loginButton.disabled = false;
+                    loginButton.innerHTML = '<i class="fas fa-sign-in-alt"></i> Masuk';
+
                     if (usernameInput === correctUsername && passwordInput === correctPassword) {
-                        window.location.href = 'home.html';
+                        window.location.href = 'home.html'; // Arahkan ke home.html jika login berhasil
                     } else {
-                        errorMessageDiv.textContent = 'User atau Kata Sandi salah.';
+                        errorMessageDiv.textContent = 'Username atau Kata Sandi salah.';
                         errorMessageDiv.style.display = 'block';
-                        loginButton.innerHTML = '<i class="fas fa-sign-in-alt"></i> Masuk';
-                        loginButton.disabled = false;
-                        errorMessageDiv.classList.add('shake');
-                        setTimeout(() => {
-                            errorMessageDiv.classList.remove('shake');
-                        }, 300);
                     }
-                }, 1000);
+                }, 1500); // Simulasi proses login selama 1.5 detik
             });
         });
     </script>
