--- a/home.html
+++ b/home.html
@@ -487,7 +487,7 @@
                     <a href="trackingrt.html" class="nav-link"><i class="fa fa-map-marker-alt"></i> Lacak RT</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://script.google.com/macros/s/AKfycbwVlk-1vOmCZxrVsk39Oa2uvtaOU9xgu9vzIaqiXfDrEKWIFZYfnwtmWIcIN6Rkc5lcNw/exec" class="nav-link">
+                    <a href="https://script.google.com/macros/s/AKfycbykqfhJQU6crU-9PqtedlWDOjNso89I3JgEEYV3eX3xjsF-oPQL_69pxqQll8bHkPn0_A/exec">
                         <i class="fa fa-truck-moving"></i> Plan Pengiriman
                     </a>
                 </li>
