--- a/home.html
+++ b/home.html
@@ -487,7 +487,7 @@
                     <a href="trackingrt.html" class="nav-link"><i class="fa fa-map-marker-alt"></i> Lacak RT</a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://script.google.com/macros/s/AKfycbxT8YvKXtiU0_qGmVmDoEkwHF-gacW--XFE8IF93HtLI6jIHQ6Us6wWvzsowKR62z_V1Q/exec">
+                    <a href="https://script.google.com/macros/s/AKfycbxT8YvKXtiU0_qGmVmDoEkwHF-gacW--XFE8IF93HtLI6jIHQ6Us6wWvzsowKR62z_V1Q/exec" class="nav-link">
                         <i class="fa fa-truck-moving"></i> Plan Pengiriman
                     </a>
                 </li>
