--- a/index.html
+++ b/index.html
@@ -1,5 +1,299 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    body {
+        font-family: 'Roboto', sans-serif;
+        margin: 0;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        min-height: 100vh;
+        /* Ganti background color dengan background image */
+        background-image: url('sampullogin.jpg');
+        background-size: cover; /* Untuk memastikan gambar menutupi seluruh area */
+        background-position: center; /* Untuk memposisikan gambar di tengah */
+        background-repeat: no-repeat; /* Agar gambar tidak diulang */
+        color: #ecf0f1;
+        padding: 20px;
+        box-sizing: border-box;
+        position: relative; /* Untuk menampung pseudo-element jika menggunakan CSS ornamen */
+    }
+
+    #particles-js {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        background-color: transparent;
+    }
+
+    .container {
+        background-color: rgba(52, 73, 94, 0.8); /* Tambahkan sedikit transparansi agar teks tetap terlihat */
+        border-radius: 12px;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+        overflow: hidden;
+        padding: 40px;
+        width: 90%;
+        max-width: 400px;
+        text-align: center;
+        z-index: 1;
+        transition: all 0.3s ease;
+    }
+
+    .login-header {
+        margin-bottom: 30px;
+    }
+
+    .login-header h2 {
+        font-size: 2.2em;
+        margin-top: 0;
+        margin-bottom: 10px;
+        color: #ecf0f1;
+        font-weight: 600;
+    }
+
+    .login-header p {
+        color: #bdc3c7;
+        font-size: 0.95em;
+        opacity: 0.9;
+        margin-bottom: 25px;
+    }
+
+    #loginOptions {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        margin-bottom: 20px;
+    }
+
+    #loginOptions button {
+        background: #3498db;
+        color: white;
+        padding: 12px 18px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        font-size: 1em;
+        font-weight: 500;
+        transition: background 0.3s ease, transform 0.2s ease-in-out;
+        width: 100%;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    #loginOptions button:hover {
+        background: #2980b9;
+        transform: scale(1.01);
+    }
+
+    .login-form {
+        display: none;
+        margin-top: 25px;
+    }
+
+    .login-form.active {
+        display: block;
+    }
+
+    .form-group {
+        margin-bottom: 20px;
+        text-align: left;
+    }
+
+    .form-group label {
+        display: block;
+        margin-bottom: 6px;
+        font-size: 0.95em;
+        font-weight: 500;
+        color: #ecf0f1;
+    }
+
+    .form-group input[type="text"],
+    .form-group input[type="password"] {
+        width: calc(100% - 24px);
+        padding: 12px;
+        border: 1px solid #7f8c8d;
+        border-radius: 8px;
+        box-sizing: border-box;
+        font-size: 0.95em;
+        transition: border-color 0.3s ease;
+        background-color: #2c3e50;
+        color: #ecf0f1;
+    }
+
+    .form-group input:focus {
+        outline: none;
+        border-color: #3498db;
+        box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
+    }
+
+    .form-group button[type="submit"] {
+        background: #2ecc71;
+        color: white;
+        padding: 14px 20px;
+        border: none;
+        border-radius: 8px;
+        cursor: pointer;
+        width: 100%;
+        font-size: 1em;
+        font-weight: 500;
+        transition: background 0.3s ease, transform 0.2s ease-in-out;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .form-group button[type="submit"]:hover {
+        background: #27ae60;
+        transform: scale(1.01);
+    }
+
+    .error-message {
+        color: #e74c3c;
+        margin-top: 15px;
+        text-align: center;
+        font-size: 0.95em;
+    }
+
+    .loading-overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(44, 62, 80, 0.8);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.3s ease, visibility 0.3s ease;
+    }
+
+    .loader {
+        border: 5px solid #34495e;
+        border-top: 5px solid #3498db;
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 2s linear infinite;
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+
+    .help-button {
+        margin-top: 30px;
+        text-align: center;
+    }
+
+    .help-button p {
+        font-size: 0.95em;
+        margin-bottom: 8px;
+        color: #bdc3c7;
+    }
+
+    .help-button a {
+        display: inline-block;
+        background-color: #25d366; /* Warna hijau WhatsApp */
+        color: white;
+        padding: 10px 18px;
+        border-radius: 8px;
+        text-decoration: none;
+        font-size: 0.95em;
+        transition: background-color 0.3s ease, transform 0.2s ease-in-out;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    }
+
+    .help-button a:hover {
+        background-color: #128c7e;
+        transform: scale(1.01);
+    }
+
+    .back-to-options {
+        margin-top: 15px;
+        background: none;
+        border: none;
+        color: #3498db;
+        cursor: pointer;
+        font-size: 0.9em;
+        transition: color 0.3s ease;
+    }
+
+    .back-to-options:hover {
+        color: #2980b9;
+    }
+
+    /* Responsif */
+    @media (max-width: 768px) {
+        .container {
+            padding: 30px;
+            max-width: 95%;
+        }
+
+        .login-header h2 {
+            font-size: 2em;
+        }
+
+        .login-header p {
+            font-size: 0.9em;
+            margin-bottom: 20px;
+        }
+
+        #loginOptions {
+            gap: 8px;
+            margin-bottom: 15px;
+        }
+
+        #loginOptions button {
+            padding: 10px 15px;
+            font-size: 0.9em;
+            margin-bottom: 10px;
+        }
+
+        .form-group {
+            margin-bottom: 15px;
+        }
+
+        .form-group label {
+            font-size: 0.85em;
+            margin-bottom: 5px;
+        }
+
+        .form-group input {
+            padding: 10px;
+            font-size: 0.9em;
+        }
+
+        .form-group button[type="submit"] {
+            padding: 12px 15px;
+            font-size: 0.95em;
+        }
+
+        .help-button {
+            margin-top: 25px;
+        }
+
+        .help-button p {
+            font-size: 0.9em;
+        }
+
+        .help-button a {
+            font-size: 0.9em;
+            padding: 8px 15px;
+        }
+
+        .back-to-options {
+            margin-top: 12px;
+            font-size: 0.85em;
+        }
+    }
+
+    /* Ornamen garis tipis (dihapus untuk menggunakan gambar) */
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +307,11 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background: #2c3e50;
+            /* Ganti background color dengan background image */
+            background-image: url('sampullogin.jpg');
+            background-size: cover; /* Untuk memastikan gambar menutupi seluruh area */
+            background-position: center; /* Untuk memposisikan gambar di tengah */
+            background-repeat: no-repeat; /* Agar gambar tidak diulang */
             color: #ecf0f1;
             padding: 20px;
             box-sizing: border-box;
@@ -31,7 +329,7 @@
         }
 
         .container {
-            background-color: #34495e;
+            background-color: rgba(52, 73, 94, 0.8); /* Tambahkan sedikit transparansi agar teks tetap terlihat */
             border-radius: 12px;
             box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
             overflow: hidden;
@@ -43,256 +341,10 @@
             transition: all 0.3s ease;
         }
 
-        .login-header {
-            margin-bottom: 30px;
-        }
+        /* ... (bagian CSS lainnya tetap sama) ... */
 
-        .login-header h2 {
-            font-size: 2.2em;
-            margin-top: 0;
-            margin-bottom: 10px;
-            color: #ecf0f1;
-            font-weight: 600;
-        }
-
-        .login-header p {
-            color: #bdc3c7;
-            font-size: 0.95em;
-            opacity: 0.9;
-            margin-bottom: 25px;
-        }
-
-        #loginOptions {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-            margin-bottom: 20px;
-        }
-
-        #loginOptions button {
-            background: #3498db;
-            color: white;
-            padding: 12px 18px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            font-size: 1em;
-            font-weight: 500;
-            transition: background 0.3s ease, transform 0.2s ease-in-out;
-            width: 100%;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        #loginOptions button:hover {
-            background: #2980b9;
-            transform: scale(1.01);
-        }
-
-        .login-form {
-            display: none;
-            margin-top: 25px;
-        }
-
-        .login-form.active {
-            display: block;
-        }
-
-        .form-group {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-
-        .form-group label {
-            display: block;
-            margin-bottom: 6px;
-            font-size: 0.95em;
-            font-weight: 500;
-            color: #ecf0f1;
-        }
-
-        .form-group input[type="text"],
-        .form-group input[type="password"] {
-            width: calc(100% - 24px);
-            padding: 12px;
-            border: 1px solid #7f8c8d;
-            border-radius: 8px;
-            box-sizing: border-box;
-            font-size: 0.95em;
-            transition: border-color 0.3s ease;
-            background-color: #2c3e50;
-            color: #ecf0f1;
-        }
-
-        .form-group input:focus {
-            outline: none;
-            border-color: #3498db;
-            box-shadow: 0 0 5px rgba(52, 152, 219, 0.5);
-        }
-
-        .form-group button[type="submit"] {
-            background: #2ecc71;
-            color: white;
-            padding: 14px 20px;
-            border: none;
-            border-radius: 8px;
-            cursor: pointer;
-            width: 100%;
-            font-size: 1em;
-            font-weight: 500;
-            transition: background 0.3s ease, transform 0.2s ease-in-out;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .form-group button[type="submit"]:hover {
-            background: #27ae60;
-            transform: scale(1.01);
-        }
-
-        .error-message {
-            color: #e74c3c;
-            margin-top: 15px;
-            text-align: center;
-            font-size: 0.95em;
-        }
-
-        .loading-overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(44, 62, 80, 0.8);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 1000;
-            opacity: 0;
-            visibility: hidden;
-            transition: opacity 0.3s ease, visibility 0.3s ease;
-        }
-
-        .loader {
-            border: 5px solid #34495e;
-            border-top: 5px solid #3498db;
-            border-radius: 50%;
-            width: 40px;
-            height: 40px;
-            animation: spin 2s linear infinite;
-        }
-
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-
-        .help-button {
-            margin-top: 30px;
-            text-align: center;
-        }
-
-        .help-button p {
-            font-size: 0.95em;
-            margin-bottom: 8px;
-            color: #bdc3c7;
-        }
-
-        .help-button a {
-            display: inline-block;
-            background-color: #25d366; /* Warna hijau WhatsApp */
-            color: white;
-            padding: 10px 18px;
-            border-radius: 8px;
-            text-decoration: none;
-            font-size: 0.95em;
-            transition: background-color 0.3s ease, transform 0.2s ease-in-out;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-        }
-
-        .help-button a:hover {
-            background-color: #128c7e;
-            transform: scale(1.01);
-        }
-
-        .back-to-options {
-            margin-top: 15px;
-            background: none;
-            border: none;
-            color: #3498db;
-            cursor: pointer;
-            font-size: 0.9em;
-            transition: color 0.3s ease;
-        }
-
-        .back-to-options:hover {
-            color: #2980b9;
-        }
-
-        /* Responsif */
-        @media (max-width: 768px) {
-            .container {
-                padding: 30px;
-                max-width: 95%;
-            }
-
-            .login-header h2 {
-                font-size: 2em;
-            }
-
-            .login-header p {
-                font-size: 0.9em;
-                margin-bottom: 20px;
-            }
-
-            #loginOptions {
-                gap: 8px;
-                margin-bottom: 15px;
-            }
-
-            #loginOptions button {
-                padding: 10px 15px;
-                font-size: 0.9em;
-                margin-bottom: 10px;
-            }
-
-            .form-group {
-                margin-bottom: 15px;
-            }
-
-            .form-group label {
-                font-size: 0.85em;
-                margin-bottom: 5px;
-            }
-
-            .form-group input {
-                padding: 10px;
-                font-size: 0.9em;
-            }
-
-            .form-group button[type="submit"] {
-                padding: 12px 15px;
-                font-size: 0.95em;
-            }
-
-            .help-button {
-                margin-top: 25px;
-            }
-
-            .help-button p {
-                font-size: 0.9em;
-            }
-
-            .help-button a {
-                font-size: 0.9em;
-                padding: 8px 15px;
-            }
-
-            .back-to-options {
-                margin-top: 12px;
-                font-size: 0.85em;
-            }
-        }
-
-        /* Ornamen garis tipis (aktif) */
+        /* Hapus atau komentari bagian ornamen garis tipis */
+        /*
         body::before {
             content: "";
             position: fixed;
@@ -303,12 +355,13 @@
             background-image: repeating-linear-gradient(
                 45deg,
                 transparent,
-                transparent 5px,
-                rgba(255, 255, 255, 0.02) 5px,
-                rgba(255, 255, 255, 0.02) 10px
+                transparent 2px,
+                rgba(255, 255, 255, 0.03) 2px,
+                rgba(255, 255, 255, 0.03) 4px
             );
             z-index: -2;
         }
+        */
     </style>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -463,7 +516,7 @@
             const storeLoginForm = document.getElementById('storeLoginForm');
             const adminLoginForm = document.getElementById('adminLoginForm');
             const storeErrorMessageDiv = document.getElementById('storeErrorMessage');
-            const adminErrorMessageDiv = document.getElementById('adminErrorMessage');
+            const adminErrorMessageDiv= document.getElementById('adminErrorMessageDiv');
             const loadingOverlay = document.getElementById('loadingOverlay');
             const backToOptionsButtons = document.querySelectorAll('.back-to-options');storeLoginBtn.addEventListener('click', function() {
                 loginOptionsDiv.style.display = 'none';
