--- a/home.html
+++ b/home.html
@@ -488,7 +488,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="https://script.google.com/macros/s/AKfycbxso4GWKZBBKwz7iYHCQA5iEvvUhQ0E-mbEl2Lf48L-4CQkPIJTGloS1e1RJ18Afimw9w/exec" class="nav-link">
-                        <i class="fa fa-truck-moving"></i> Plan Pengiriman
+                        <i class="fa fa-truck-moving"></i> Lacak Pengiriman
                     </a>
                 </li>
                 <li class="nav-item">
