--- a/home.html
+++ b/home.html
@@ -599,6 +599,7 @@
 
         <footer class="footer">
             <p>&copy; 2025 Hak Cipta Dilindungi. Dikelola oleh Faisal.</p>
+            <p>inspiration from Pak Miftah.</p>
             <p>
                 <a href="https://wa.me/6287874805035" target="_blank" rel="noopener noreferrer" class="whatsapp-link">
                     <i class="fab fa-whatsapp whatsapp-icon"></i> Hubungi Kami via WhatsApp
