--- a/home.html
+++ b/home.html
@@ -462,7 +462,20 @@
         }
     </style>
 </head>
-<body>
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/67e22f64b893c9190ff4a578/1in5oi91b';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
+    <body>
     <div class="container">
         <header class="header">
             <h1 class="header-title">Layanan Permintaan Pengiriman</h1>
