--- a/home.html
+++ b/home.html
@@ -541,7 +541,7 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
 
                 <div class="slide fade">
-                    <h3><i class="fa fa-truck-moving"></i> Plan Pengiriman</h3>
+                    <h3><i class="fa fa-truck-moving"></i> Lacak Pengiriman</h3>
                     <p>Untuk melihat DO anda dibawa oleh armada berapa dan dapat melihat lalu chat langsung kepada drivernya.</p>
                 </div>
 
