--- a/home.html
+++ b/home.html
@@ -551,13 +551,18 @@ s0.parentNode.insertBefore(s1,s0);
                 </div>
 
                 <div class="slide fade">
-                    <h3><i class="fa fa-user-tie"></i> Daftar Kontak Person In Charge (PIC)</h3>
-                    <p>Temukan daftar PIC yang bertanggung jawab atas berbagai layanan pengiriman. Anda dapat menghubungi PIC terkait jika memiliki pertanyaan spesifik atau memerlukan bantuan lebih lanjut.</p>
+                    <h3><i class="fa fa-user-tie"></i> Jajaran (PIC)</h3>
+                    <p>Anda dapat melihat daftar PIC yang bertanggung jawab atas berbagai layanan pengiriman. </p>
                 </div>
 
                 <div class="slide fade">
                     <h3><i class="fa fa-question-circle"></i> Frequently Asked Questions (FAQ)</h3>
                     <p>Temukan jawaban atas pertanyaan umum terkait layanan pengiriman kami. Bagian FAQ menyediakan informasi cepat dan berguna untuk berbagai topik.</p>
+                </div>
+            </div>
+              <div class="slide fade">
+                    <h3><i class="fa fa-question-circle"></i> Live Chat (Tawk.to)</h3>
+                    <p>Fitur dengan live chat responsif yang anda bisa gunakan bila ada kendala mengenai penjaluran anda yang diluar dari didaftar menu.</p>
                 </div>
             </div>
 
