--- a/home.html
+++ b/home.html
@@ -513,7 +513,7 @@ s0.parentNode.insertBefore(s1,s0);
                     <a href="https://script.google.com/macros/s/AKfycbxlKKcXGWC6eSCpczjZ5Z50zZ0Y3dgXinJZcZ3wPekWhbHYT9Flva3jSmr4jhJcYfD9/exec" class="nav-link"><i class="fa fa-clipboard-check"></i> Konfirmasi DO Project</a>
                 </li>
                 <li class="nav-item">
-                    <a href="pic.html" class="nav-link"><i class="fa fa-user-tie"></i> Daftar Kontak PIC</a>
+                    <a href="pic.html" class="nav-link"><i class="fa fa-user-tie"></i> Jajaran PIC</a>
                 </li>
                 <li class="nav-item">
                     <a href="qna.html" class="nav-link"><i class="fa fa-question-circle"></i> FAQ</a>
