--- a/pic.html
+++ b/pic.html
@@ -145,7 +145,7 @@
             { name: "Pak Ilyas", image: "ilyas.png" },
             { name: "Pak Irfan", image: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" },
             { name: "Pak Budi", image: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" },
-            { name: "Pak Yuni", image: "yuni.png" },
+            { name: "Bu Yuni", image: "yuni.png" },
             { name: "Pak Faisal", image: "faisal.jpeg" }
         ];
 
