--- a/pic.html
+++ b/pic.html
@@ -143,7 +143,7 @@
     <script>
         const picData = [
             { name: "Pak Ilyas", image: "ilyas.png" },
-            { name: "Pak Irfan", image: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" },
+            { name: "Pak Irfan", image: "irfan.jpeg" },
             { name: "Pak Budi", image: "budi.jpeg" },
             { name: "Bu Yuni", image: "yuni.png" },
             { name: "Pak Faisal", image: "faisal.jpeg" }
