--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
     <div id="particles-js"></div>
     <div class="container">
         <div class="login-header">
-            <h2>Akses Akun</h2>
+            <h2>Selamat Datang</h2>
             <p>Silakan pilih jenis akun untuk login.</p>
         </div>
 
@@ -559,7 +559,7 @@
                     if (usernameInput === targetUrl.username && passwordInput === targetUrl.password) {
                         window.location.href = targetUrl.url;
                     } else {
-                        errorMessageDiv.textContent = 'Username atau Kata Sandi salah.';
+                        errorMessageDiv.textContent = 'Username atau Kata Sandinya salah itu broo wkwk.';
                         errorMessageDiv.style.display = 'block';
                     }
                 }, 1500);
